--- a/jul.css
+++ b/jul.css
@@ -13,12 +13,16 @@
 }
 .jul a{
 	text-decoration: none;
+	color: #000;
 }
 .jul h1{
 	border: 2px solid black;
 	background-color: skyblue;
 	margin-top: 25px;
 	text-align: center;
+}
+.jul i{
+	color: #000;
 }
 @media only screen and (min-width: 1100px){
 .jul img{
